autogenerate python flask server
