# python-flask-server/setup.py
@@ -18,10 +18,10 @@ REQUIRES = ["connexion"]
 setup(
     name=NAME,
     version=VERSION,
-    description="API for an expander based on DepMap gene-knockdown correlations",
+    description="API for an expander based on phenotype similarity",
     author_email="",
     url="",
-    keywords=["Swagger", "API for an expander based on DepMap gene-knockdown correlations"],
+    keywords=["Swagger", "API for an expander based on phenotype similarity"],
     install_requires=REQUIRES,
     packages=find_packages(),
     package_data={'': ['swagger/swagger.yaml']},
@@ -29,7 +29,7 @@ setup(
     entry_points={
         'console_scripts': ['swagger_server=swagger_server.__main__:main']},
     long_description="""\
-    Gene-list expander based on DepMap gene-knockdown correlations
+    Gene-list expander based on phenotype similarity.
     """
 )
 
