# python-flask-server/swagger_server/models/__init__.py
@@ -5,6 +5,7 @@ from __future__ import absolute_import
 # import models into model package
 from swagger_server.models.attribute import Attribute
 from swagger_server.models.gene_info import GeneInfo
+from swagger_server.models.gene_info_identifiers import GeneInfoIdentifiers
 from swagger_server.models.model_property import ModelProperty
 from swagger_server.models.parameter import Parameter
 from swagger_server.models.transformer_info import TransformerInfo
